sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:6: error: not found: value i
    temp=getValeur(i)
                   ^AlgShellSort:7: error: not found: value i
    while ((ecart>0)&&(getValeur(i-ecart)>temp)){
                                 ^AlgShellSort:8: error: not found: value i
      setValeur(i,getValeur(i-ecart))
                ^AlgShellSort:8: error: not found: value i
      setValeur(i,getValeur(i-ecart))
                            ^AlgShellSort:11: error: not found: value i
     	setValeur(i,temp)
                  ^