sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  val taille=getNombreValeurs()
  var temp=0
  var ecart=taille/2
    temp=getValeur(i)
    while ((ecart>0)&&(getValeur(i-ecart)>temp)){
      setValeur(i,getValeur(i-ecart))
      ecart=ecart/2
      }
     	setValeur(i,temp)
}

def insertionSort() {
  val taille=getNombreValeurs()
  var temp=0
  var j=0
  for (i<-1 to taille-1){
    temp=getValeur(i)
    j=i
    while ((j>0)&&(getValeur(j-1)>temp)){
      setValeur(j,getValeur(j-1))
      j=j-1
      }
     	setValeur(j,temp) }}